# Sentinel-Control

./: .gitignore
Aether/: Aether_Indexer.ipynb
Business_Ops/: FUNDING_STRATEGY_Part_3_with_RIP_Lyrics.md  Funding_Strategy_Part_7.md  Omniversal_Media_Proposal.md  Spiritual_Tech_Consciousness_Part_III.md  Spiritual_Tech_Deep_Dive_EyeOfAether.md  Spiritual_Tech_and_Consciousness_Ventures.md
Core_Codex/: aether_manifest.yaml  ai-tree.txt
EverLight/: everlightos-tree.md  everlightos.com.txt
EverLightOS-main/: .gitattributes  .gitignore  .pre-commit-config.yaml  package-lock.json  package.json
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/: README.md  pyproject.toml
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/aws/blueprints/: README.md
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/docs/: DESIGN.md
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/src/everlight_apm_assistant/: cli.py  core.py  schema.py  storage.py
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/src/everlight_apm_assistant/everlight_apm_assistant/: presets.py  schema.py
EverLightOS-main/Amazon_RME_BridgeOps/AWS/Dev/everlight-apm-assistant/tests/: test_schema.py
Infra_DevOps/: docker-checks.txt  wordpress-com-mcp.mcpb
Jupyter_Joplin/: Untitled.ipynb
Misc/: output.md
Omniversal Override Protocol/: ._02_strategic_positioning.md  ._AI_Infrastructure_Ethical_Seed_Fund.md  ._Angel_Investors_in_Media_Reform.md  ._FUNDING_STRATEGY_Part_3_with_RIP_Lyrics.md  ._assets  (+9 more)
(+640 files in other folders)
